tests/ui/derived_lhs_no_ref_unit.stderr
error[E0277]: the trait bound `Foo: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_lhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Foo`
   |
   = help: the following other types implement trait `quantities::HasRefUnit`:
             Acceleration
             Area
             Bar
             Baz
             DataThroughput
             DataVolume
             Energy
             Force
           and 8 others
   = help: see issue #48214
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `FooUnit: quantities::LinearScaledUnit` is not satisfied
   --> tests/ui/derived_lhs_no_ref_unit.rs:21:1
    |
21  | #[quantity(Foo * Bar)]
    | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::LinearScaledUnit` is not implemented for `FooUnit`
    |
    = help: the following other types implement trait `quantities::LinearScaledUnit`:
              AccelerationUnit
              AreaUnit
              BarUnit
              BazUnit
              DataThroughputUnit
              DataVolumeUnit
              DurationUnit
              EnergyUnit
            and 8 others
note: required by a bound in `quantities::HasRefUnit`
   --> src/lib.rs
    |
    |     <Self as Quantity>::UnitType: LinearScaledUnit,
    |                                   ^^^^^^^^^^^^^^^^ required by this bound in `HasRefUnit`
    = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_lhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Foo`
   |
   = help: the following other types implement trait `quantities::HasRefUnit`:
             Acceleration
             Area
             Bar
             Baz
             DataThroughput
             DataVolume
             Energy
             Force
           and 8 others
note: required for `Foo` to implement `std::ops::Mul<Bar>`
  --> tests/ui/derived_lhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^
   = help: see issue #48214
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_lhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Foo`
   |
   = help: the following other types implement trait `quantities::HasRefUnit`:
             Acceleration
             Area
             Bar
             Baz
             DataThroughput
             DataVolume
             Energy
             Force
           and 8 others
note: required for `Bar` to implement `std::ops::Mul<Foo>`
  --> tests/ui/derived_lhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^
   = help: see issue #48214
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_lhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Foo`
   |
   = help: the following other types implement trait `quantities::HasRefUnit`:
             Acceleration
             Area
             Bar
             Baz
             DataThroughput
             DataVolume
             Energy
             Force
           and 8 others
note: required for `Baz` to implement `std::ops::Div<Foo>`
  --> tests/ui/derived_lhs_no_ref_unit.rs:21:1
   |
21 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound introduced here
...
24 | struct Baz {}
   |        ^^^
   = help: see issue #48214
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)
